Opened 14 years ago

Closed 14 years ago

#3178 closed bug (fixed)

[Firefox] After installing Haiku to partition, Firefox at first run doesn't open a window

Reported by: Adek336 Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version: R1/pre-alpha1
Keywords: Cc: planche2k@…
Blocked By: Blocking: #3563
Platform: All

Description

After installing Haiku to partition, the first time you run Firefox you don't get a window. You have to kill the team.

Any subsequent run of Firefox goes fine.

I've been seeing this for some time now and at the moment I'm on hrev28736.

This is reproducible, note http://www.freelists.org/post/haiku-development/Bug-5-Boot-partition-problem-on-USB-key,22 .

Trying to drop Firefox into debugger from the KDL makes the Firefox team magically disappear.

Attachments (1)

img-1058-a.jpg (169.3 KB ) - added by Adek336 14 years ago.

Download all attachments as: .zip

Change History (12)

by Adek336, 14 years ago

Attachment: img-1058-a.jpg added

comment:1 by Adek336, 14 years ago

Note the curious backtrace which includes "hardware_interrupt" and the fact that interrupt #1 is active.

comment:2 by Adek336, 14 years ago

Ah, int 1 is for the keyboard and it is handling F12 with the debugger prompt.

comment:3 by bonefish, 14 years ago

Blocking: 3563 added

(In #3563) Closing as duplicate of #3178.

comment:4 by bonefish, 14 years ago

Just as in #3563 the KDL stack trace shows the thread entering an acquire_sem() syscall. My guess would be that it's an infinite loop in the Firefox code, trying to acquire an invalid semaphore.

Why attaching a debugger would terminate the team I have no idea. Might be a bug in the debug support code. Enabling debug output in src/system/kernel/debug/user_debugger might yield some helpful information.

comment:5 by stippi, 14 years ago

The very first time Firefox is run, it does something funny. It does something with the settings profile and then relaunches itself. It's also the reason that when it does work, it will forget it meant to open some HTML file your double clicked.

comment:6 by andreasf, 14 years ago

Cc: planche2k@… added

comment:7 by Adek336, 14 years ago

Steps to reproduce without reinstalling:

  • have two copies of the BeZillaBrowser directory, I tested with the one installed as an optional package and a BeZilla-gcc4 build;
  • open BeZilla from one directory, close, open BeZilla from the other, close; repeat until BeZilla freezes;
  • after managing to freeze BeZilla, it seems you have to reboot to be able to freeze it again. Also, at this point, every time you close BeZilla you get a kill/debug dialog box.

comment:8 by bonefish, 14 years ago

Should be fixed in hrev29612. Please verify.

comment:9 by andreasf, 14 years ago

At hrev29612 Firefox no longer hangs, instead it just terminated on first run. On second run it worked as expected.

in reply to:  9 comment:10 by bonefish, 14 years ago

Replying to andreasf:

At hrev29612 Firefox no longer hangs, instead it just terminated on first run. On second run it worked as expected.

The normal first-start procedure for Firefox seems to be to terminate and restart itself. Don't know, why the restart doesn't work on some installations (when I test it here, it works). It's probably best to file a ticket in the Bezilla bug tracker and let the Bezilla guys have a look.

comment:11 by mmadia, 14 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.