deliver_signal() SIGKILL: * Use atomic_or() to update sig_pending of the main thread. * We didn't call update_thread_signals_flag() for the main thread, so its   handle_signals() wouldn't be called, resulting in an infinite loop, if this   signal interrupted a restartable syscall. Calling exit() from another thread   than the main thread was likely to run into this problem. Should fix #3178.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29612 a95241bf-73f2-0310-859d-f6bbb57e9c96